--- a/_config.yaml
+++ b/_config.yaml
@@ -21,16 +21,14 @@
 title: Brian Hanifin
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Stay-at-home dad, Home Assistant enthusiast, and amateur repairman.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://brianhanifin.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: brianhanifin
 github_username:  brianhanifin
 
 # Build settings
-theme: minima
+theme: Hacker
 plugins:
   - jekyll-feed
 
