theme: reworked as a dark theme

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ twitter:
   username: brianhanifin
 
 social:
-  name: Brian Hanifin                  # it will shows as the copyright owner in Footer
+  name: Brian Hanifin
   email: blog@brianhanifin.com
   links:
     # The first element serves as the copyright owner's link
