--- a/_data/label.yml
+++ b/_data/label.yml
@@ -6,7 +6,7 @@ tabs:
   - { name: "Home", icon: 'fas fa-home' }
   - { name: "Categories", path: tabs, url: categories, icon: 'fas fa-stream' }
   - { name: "Tags", path: tabs, url: tags, icon: 'fas fa-tags' }
-  - { name: "Archives", path: tabs, url: archives, icon: 'fas fa-archive'}
+  #- { name: "Archives", path: tabs, url: archives, icon: 'fas fa-archive'}
   - { name: "About", path: tabs, url: about, icon: 'fas fa-info'}
 
 panel:
